# git_manager

./: .env.example  .gitignore  Cargo.toml  README.md  labels.json
src/: config.rs  error.rs  gitlab.rs  main.rs
src/models/: common.rs  config.rs
src/providers/: github.rs  gitlab.rs  mod.rs
src/tests/: integration.rs  mod.rs
src/traits/: mod.rs  repository.rs
templates/: issue.json
