[package]
name = "gitlab_label_manager"
version = "0.1.0"
edition = "2021"
authors = ["Votre Nom"]
description = "Un gestionnaire de labels GitLab"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"
percent-encoding = "2.3"  # Remplace urlencoding
