[package]
name = "repo_manager"
version = "0.1.0"
edition = "2021"
authors = ["Votre Nom"]
description = "Un gestionnaire de labels GitLab"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.2"
anyhow = "1.0"
dotenv = "0.15"
percent-encoding = "2.3"                                 # Remplace urlencoding
async-trait = "0.1.83"
